--- a/mbti-frontend/public/index.html
+++ b/mbti-frontend/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>MBTI Personality Predictor - Discover Your Personality Type</title>
+    <meta name="description" content="Discover your MBTI personality type through our adaptive quiz. Get accurate personality predictions based on machine learning." />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
